# railward

./: CHANGELOG.md  Makefile  README.md  THREAT_MODEL.md  claims_check.py  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
docs/: ADAPTERS.md  THREAT_TAXONOMY.md
examples/: reference_proof.json  strict.yaml
railward/: __init__.py  adversary.py  api.py  cli.py  decide.py  lint.py  log.py  policy.py  taxonomy.py
tests/: test_adversary.py  test_api.py  test_no_false_positives.py  test_portable_and_summary.py  test_redirection.py  test_taxonomy.py
