[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "railward"
version = "0.3.0"
description = "A deterministic gate for untrusted agents that ships with its own adversary and a re-runnable proof."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Armando Shkambi" }]
keywords = ["ai-agents", "guardrails", "claude-code", "security", "policy"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
dependencies = ["cryptography>=42", "PyYAML>=6"]

[project.urls]
Homepage = "https://github.com/Ourbando/railward"
Repository = "https://github.com/Ourbando/railward"
Issues = "https://github.com/Ourbando/railward/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]
demo = ["Pillow>=10"]   # only to regenerate assets/demo.gif; not a runtime or test dependency

[project.scripts]
railward = "railward.cli:main"

[tool.setuptools]
packages = ["railward"]
